Estilização Da Listagem De Pokemons

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <section class="content">
         <h1>Pokedex</h1>
 
-   <ol>
+   <ol class="pokemons">
     <li>
         bulbasaur
     </li>
@@ -30,6 +30,15 @@
     </li>
     <li>
         venusaur
+    </li>
+    <li>
+        charmander
+    </li>
+    <li>
+        charmeleon
+    </li>
+    <li>
+        charizard
     </li>
    </ol>
     </section>
